# xRDP

./: .gitignore  README.md
.codegpt/: head
client/: package-lock.json  package.json
client/server/: client.rs  helper.rs  server.rs
client/src/: App.css  App.tsx  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: logo.icns
client/src-tauri/src/: main.rs
client/src-tauri/src/app/: client.rs  drive.rs  input.rs  render.rs  render_handler.rs  window.rs  window_handler.rs
client/src-tauri/src/server/: auth.rs  client.rs  main.rs  network.rs
client/src/components/: Devices.tsx  Form.tsx  Sidebar.tsx  Tab.tsx
client/src/components/Button/: Button.tsx  Connect.tsx
client/src/components/Input/: CheckboxInput.tsx  InputBox.tsx  InputText.tsx  RadioInput.tsx  SettingDialogBox.tsx
client/src/pages/: Home.tsx
client/src/styles/: button.css  form.css  input.css  sidebar.css  tab.css
client/src/theme/: ThemeProvider.tsx
server/: Cargo.toml  requirements.py
server/python/: requirements.txt  run.py  test.py
server/src/: auth.rs  main.rs  network.rs  server.rs
server/src/app/: auth.rs  drive_protocol.rs  helper.rs  input_handler.rs  read_inputs.rs  server.rs  session_handler.rs  stream.rs  stream_handler.rs  wts.rs
