[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
image = "0.24"
scrap = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rsa = "0.9"
aes = "0.8"
windows = { version = "0.48", features = ["Win32_NetworkManagement_WNet", "Win32_Foundation", "Win32_System_WindowsProgramming","Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock"] }
winapi = { version = "0.3.9", features = ["winbase", "winnt", "winuser", "handleapi", "wingdi", "fileapi", "winnetwk",  "lmshare", "lmaccess"] }
lz4_flex = "0.11.3"
minifb = "0.23"
bincode = "1.3.3"