[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rsa = "0.9"
aes = "0.8"
windows = { version = "0.48", features = [
        "Win32_Foundation",
        "Win32_Security",
        "Win32_System_RemoteDesktop",
        "Win32_System_ProcessStatus",
        "Win32_NetworkManagement_WNet",
        "Win32_System_Threading",
        "Win32_System_SystemInformation",
        "Win32_System_WindowsProgramming",
        "Win32_NetworkManagement_IpHelper",
        "Win32_Networking_WinSock",
        "Win32_UI_Input_KeyboardAndMouse",
        "Win32_System_Environment"] }
winapi = { version = "0.3.9", features = [ "processthreadsapi", "winnt", "securitybaseapi","winbase", "winuser", "handleapi", "wingdi"] }
lz4_flex = "0.11.3"
minifb = "0.23"
rand  = "0.8.5"
get-last-error = "0.1.1"