[package]
name = "rdp"
version = "0.1.0"
description = "Remote Desktop application"
authors = ["aditya.kumar@katalystpartners.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
enigo = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minifb = "0.27"
winit = "0.30.5"
regex = "1"
chrono = "0.4"
druid = "0.7"
lz4_flex = "0.11.3"
image = "0.24"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
